overlayed the name over the image and pushed it to the end and translated it down to create an overlapping effect as well as spaced the details correctly in the home cards

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -161,13 +161,48 @@ $font-display: 'Josefin Sans', sans-serif; // A thinner more stylized font for t
   grid-gap: 7rem; }
 
 .home {
-  background-color: #f9f7f6; }
+  background-color: #f9f7f6;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 3.5rem;
+  justify-items: center; }
   .home__img {
-    width: 100%; }
-  .home svg {
+    width: 100%;
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    z-index: 1; }
+  .home__like {
+    fill: #c69963;
+    height: 2.5rem;
+    width: 2.5rem;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    justify-self: flex-end;
+    margin: 1rem;
+    z-index: 2; }
+  .home__name {
+    background-color: #101d2c;
+    padding: 1.25rem 0;
+    width: 80%;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: #f9f7f6;
+    text-align: center;
+    transform: translate(0%, 50%);
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    align-self: end;
+    z-index: 3; }
+  .home__location, .home__rooms {
+    margin-top: 2.5rem; }
+  .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
     fill: #c69963;
     height: 2rem;
     width: 2rem; }
+  .home__btn {
+    grid-column: 1 / -1;
+    justify-self: stretch; }
 
 .gallery {
   background-color: #54483a;
