--- a/src/sass/_homes.scss
+++ b/src/sass/_homes.scss
@@ -11,16 +11,77 @@
 .home {
   background-color: $color-grey-light-1;
 
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 3.5rem;
+  justify-items: center;
+
   &__img {
     width: 100%;
+
+    grid-row: 1 / 2; // Have to set the same grid-row so that it forces overlapping (since the placement algo won't allow that implicitely)
+    grid-column: 1 / -1;
+
+    z-index: 1;
   }
 
   &__like {
+    fill: $color-primary;
+    height: 2.5rem;
+    width: 2.5rem;
+
+    grid-row: 1 / 2; // Have to set the same grid-row so that it forces overlapping (since the placement algo won't allow that implicitely)
+    grid-column: 2 / 3;
+
+    justify-self: flex-end; // The heart icon should be at the end
+    margin: 1rem; // And not touching the edges
+
+    z-index: 2;
   }
 
-  svg {
-    fill: $color-primary;
-    height: 2rem;
-    width: 2rem;
+  &__name {
+    background-color: $color-secondary;
+    padding: 1.25rem 0;
+    width: 80%;
+
+    font-family: $font-display;
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: $color-grey-light-1;
+    text-align: center;
+
+    // We overlap the name over the image and have it aligned to the bottom and translated DOWN
+    // Instead of having it be place under normally and translating it UP
+    // This is because doing the latter would leave 50% of the height as a margin on the bottom pretty much
+    transform: translate(0%, 50%);
+    grid-row: 1 / 2; // Have to set the same grid-row so that it forces overlapping (since the placement algo won't allow that implicitely)
+    grid-column: 1 / -1;
+
+    align-self: end;
+
+    z-index: 3; // Same as the heart icon
+  }
+
+  &__location,
+  &__rooms {
+    margin-top: 2.5rem;
+  }
+
+  &__location,
+  &__rooms,
+  &__area,
+  &__price {
+    svg {
+      fill: $color-primary;
+      height: 2rem;
+      width: 2rem;
+    }
+    p {
+    }
+  }
+
+  &__btn {
+    grid-column: 1 / -1;
+    justify-self: stretch;
   }
 }
